# ros-mcp-server

./: .gitignore  Ai-Nex_en_raspberry-pi_v3_0_0.ppn  Ai-Nex_en_windows_v3_0_0.ppn  README.md  SART_EX.bat  config.json  connecttest.py  mictest.py  pyproject.toml  requirements.txt  server.py  voice_agent.py
ROS/: action_groups.py
msgs/geometry_msgs/: twist.py
msgs/sensor_msgs/: image.py
utils/: websocket_manager.py
