[project]
name = "ros-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "opencv-python>=4.11.0.86",
    "websocket>=0.2.1",
    "websocket-client>=1.8.0",
    "roslibpy",
    "together>=1.5.13",
    "gtts>=2.5.4",
    "pygame>=2.6.1",
    "speechrecognition>=3.14.3",
    "fastmcp>=2.8.1",
    "pyaudio>=0.2.14",
    "pvporcupine>=3.0.5",
    "picovoice>=0.8.0",
]
